--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,8 @@
 
 
 html, body {
-	background-color: #ede7d9;
-	height: 100%;
-	padding: 8px;
+  min-height: 100vh;
+	padding: 16px;
   margin: 0;
 }
 
@@ -19,13 +18,34 @@ html, body {
 
 .main {
   background: $red;
-  width: 50%;
   height: 70%;
   border-radius: 15px;
+  padding: 16px;
   margin: 24px auto;
   &__title {
     text-align: center;
     color: $gray;
   }
+}
+.input {
+  padding: 8px;
+  box-sizing: border-box;
+  width: 80%;
+}
+
+.input__box {
+  align-content: center;
+  padding: 8px;
+  margin: 24px;
+}
+
+.input__button {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.input__save, .input__load {
+  margin: 4px;
 }
 
